--- a/src/app/student-schedule/student-schedule.component.css
+++ b/src/app/student-schedule/student-schedule.component.css
@@ -1,7 +1,21 @@
 .month {
     padding: 70px 25px;
     width: 100%;
-    background: #1abc9c;
+    background: #007bff;
     text-align: center;
+    position: relative;
+    color: aliceblue;
+  }
+  .month .prev {
+    float: left;
+    padding-top: 10px;
   }
   
+  .month .next {
+    float: right;
+    padding-top: 10px;
+  }
+  .false{
+      border-color: #007bff; 
+      border: solid;
+  }
