--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -48,10 +48,10 @@
             </p>
 
             <!--Facebook-->
-            <a type="button" mdbBtn floating="true" size="sm" class="btn-fb waves-light" mdbWavesEffect><i class="fa fa-facebook-f"></i></a>
-
+            <a type="button" mdbBtn floating="true" size="lg" class="btn-fb waves-light prefix blue-text" mdbWavesEffect><i class="fa fa-facebook-f"></i></a>
             <!--Twitter-->
-            <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light" mdbWavesEffect><i class="fa fa-twitter"></i></a>
+            <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light prefix blue-text" mdbWavesEffect><i class="fa fa-twitter"></i></a>
+            <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light prefix blue-text" mdbWavesEffect><i class="fa fa-instagram"></i></a>
 
             <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogEditUser()">editar<i class="fa fa-user "
                 aria-hidden="true"></i></button>
