--- a/src/app/student-schedule/student-schedule.component.html
+++ b/src/app/student-schedule/student-schedule.component.html
@@ -1,86 +1,118 @@
+<ng-template #modalContent let-close="close">
+  <div class="modal-header">
+    <h5 class="modal-title">Event action occurred</h5>
+    <button type="button" class="close" (click)="close()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div>
+      Action:
+      <pre>{{ modalData?.action }}</pre>
+    </div>
+    <div>
+      Event:
+      <pre>{{ modalData?.event | json }}</pre>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-secondary" (click)="close()">
+      OK
+    </button>
+  </div>
+</ng-template>
 
+<div class="row text-center">
+  <div class="col-md-4">
+    <div class="btn-group">
+      <div
+        class="btn btn-primary"
+        mwlCalendarPreviousView
+        [view]="view"
+        [(viewDate)]="viewDate"
+        (viewDateChange)="activeDayIsOpen = false"
+      >
+        Previous
+      </div>
+      <div
+        class="btn btn-outline-secondary"
+        mwlCalendarToday
+        [(viewDate)]="viewDate"
+      >
+        Today
+      </div>
+      <div
+        class="btn btn-primary"
+        mwlCalendarNextView
+        [view]="view"
+        [(viewDate)]="viewDate"
+        (viewDateChange)="activeDayIsOpen = false"
+      >
+        Next
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+  </div>
+  <div class="col-md-4">
+    <div class="btn-group">
+      <div
+        class="btn btn-primary"
+        (click)="view = CalendarView.Month"
+        [class.active]="view === CalendarView.Month"
+      >
+        Month
+      </div>
+      <div
+        class="btn btn-primary"
+        (click)="view = CalendarView.Week"
+        [class.active]="view === CalendarView.Week"
+      >
+        Week
+      </div>
+      <div
+        class="btn btn-primary"
+        (click)="view = CalendarView.Day"
+        [class.active]="view === CalendarView.Day"
+      >
+        Day
+      </div>
+    </div>
+  </div>
+</div>
+<br />
+<div [ngSwitch]="view">
+  <mwl-calendar-month-view
+    *ngSwitchCase="CalendarView.Month"
+    [viewDate]="viewDate"
+    [events]="events"
+    [refresh]="refresh"
+    [activeDayIsOpen]="activeDayIsOpen"
+    (dayClicked)="dayClicked($event.day)"
+    (eventClicked)="handleEvent('Clicked', $event.event)"
+    (eventTimesChanged)="eventTimesChanged($event)"
+  >
+  </mwl-calendar-month-view>
+  <mwl-calendar-week-view
+    *ngSwitchCase="CalendarView.Week"
+    [viewDate]="viewDate"
+    [events]="events"
+    [refresh]="refresh"
+    (eventClicked)="handleEvent('Clicked', $event.event)"
+    (eventTimesChanged)="eventTimesChanged($event)"
+  >
+  </mwl-calendar-week-view>
+  <mwl-calendar-day-view
+    *ngSwitchCase="CalendarView.Day"
+    [viewDate]="viewDate"
+    [events]="events"
+    [refresh]="refresh"
+    (eventClicked)="handleEvent('Clicked', $event.event)"
+    (eventTimesChanged)="eventTimesChanged($event)"
+  >
+  </mwl-calendar-day-view>
+</div>
 
+<br /><br /><br />
 
-
-
-
-<mdb-card cascade="false" narrower="true">
-        <!--Card image-->
-        <div class="view view-cascade gradient-card-header blue-gradient narrower py-2 mx-4 mb-3 d-flex justify-content-between align-items-center">
-      
-   
-          <div class="month">      
-              <ul>
-                <li class="prev"><i class="fa fa-chevron-left prefix white-text" style="font-size: 20px;"></i></li>
-                <li class="next"><i class="fa fa-chevron-right prefix white-text" aria-hidden="true" style="font-size: 20px;"></i></li>
-                <li>
-                    February<br>
-                  <span style="font-size:18px">{{dia}}</span>
-                </li>
-              </ul>
-            </div>
-      
-          
-      
-        </div>
-        <!--/Card image-->
-      
-        <div class="px-4">
-      
-          <div class="table-wrapper">
-            <!--Table-->
-            <table class="mb-0" mdbTable hover="true">
-      
-              <!--Table head-->
-              <thead>
-              <tr>
-                <th>
-                  <mdb-checkbox></mdb-checkbox>
-                </th>
-                <th class="th-lg">
-                  <a (click)="sortBy('lunes')">lunes 
-                  </a>
-                </th>
-                <th class="th-lg">
-                  <a (click)="sortBy('martes')">martes 
-                  </a>
-                </th>
-                <th class="th-lg">
-                  <a (click)="sortBy('miercoles')">miercoles
-                  </a>
-                </th>
-                <th class="th-lg">
-                  <a (click)="sortBy('jueves')">jueves
-                  </a>
-                </th>
-                <th class="th-lg">
-                  <a (click)="sortBy('viernes')">viernes
-                  </a>
-                </th>
-                <th class="th-lg">
-                  <a (click)="sortBy('sabado')">sabado
-                  </a>
-                </th>
-                <th class="th-lg">
-                  <a (click)="sortBy('domingo')">domingo
-                  </a>
-                </th>
-              </tr>
-              </thead>
-              <!--Table head-->
-      
-              <!--Table body-->
-              <tbody>
-              <tr *ngFor="let row of tableData;let i = index">
-                <th scope="row">
-                    {{dia}}
-                </th>
-                <td>{{dia1}}</td>
-              </tr>
-              </tbody>
-              <!--Table body-->
-            </table>
-            <!--Table-->
-          </div>
-        </div>
-      </mdb-card>
