--- a/src/app/student-root/student-root.component.html
+++ b/src/app/student-root/student-root.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar id="mat-toolbar-home">
-  <a routerLink="{{getRouterHome()}}" matTooltip="Inicio">BDFGYM</a>
+  <a routerLink="{{getRouterHome()}}" matTooltip="Inicio" class="btn-fb waves-light prefix white-text" ><i class="fa fa-home "></i>BDFGYM</a>
   <span class="example-spacer"></span>
   <div id="div-menu-full">
     <button id="button-schedule" routerLink="{{getRouterSchedule()}}" mat-flat-button (click)="printOfBlack($event.currentTarget)">Horario</button>
