--- a/src/app/dialogs/edit-user/dialog-edit-user.component.html
+++ b/src/app/dialogs/edit-user/dialog-edit-user.component.html
@@ -32,7 +32,7 @@
     </div>
 
     <div id="btnUser" class="modal-footer d-flex justify-content-center">
-      <button mdbBtn color="deep-orange" class="waves-light" (click)="guardarDatos()"  mdbWavesEffect>Guardar Cambios</button>
+      <button mdbBtn color="deep-orange" class="waves-light" (click)="guardarDatos()"  mdbWavesEffect mat-dialog-close>Guardar Cambios</button>
     </div>
   </div>
 
