--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -58,6 +58,8 @@
             <a class="btn aqua-gradient  btn-md" href="#/student/medicalHistory">
               Historial Medico<i class="fa fa-heartbeat"></i>
             </a>
+            <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogEditPasswordUser()">Editar contraseña<i class="fa fa-key "
+              aria-hidden="true"></i></button>
             <!-- <button type="button" class="btn btn-outline-default btn-rounded waves-effect"><i class="fa fa-gem mr-2"
                     aria-hidden="true"></i>Button</button> -->
           </div>
