--- a/src/app/dialogs/login/dialog-login.component.html
+++ b/src/app/dialogs/login/dialog-login.component.html
@@ -6,7 +6,7 @@
   </mat-form-field>
   <br>
   <mat-form-field id="mat-form-password">
-    <input matInput placeholder="Constraseña" id="password" required>
+    <input matInput type="password" placeholder="Constraseña" id="password" required>
   </mat-form-field>
   <br>
   <button id="button-login" mat-flat-button (click)="loginUser($event)" mat-dialog-close>Ingresar</button>
