--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -38,28 +38,39 @@
             <!--Quotation
             <p><i class="fa fa-quote-left"></i> Neque cupiditate assumenda in maiores repudiandae mollitia
               architecto.</p>-->
-            <p *ngIf="diasdif <= 0 " class="suscripcion">Ultima Suscripción: {{ultimaSuscripcion.servicio.nombreServicio}}</p>
-            <p *ngIf="diasdif > 0 " class="suscripcion">Suscripción actual: {{ultimaSuscripcion.servicio.nombreServicio}}</p>
+            <p *ngIf="diasdif <= 0 " class="suscripcion">Ultima Suscripción:
+              {{ultimaSuscripcion.servicio.nombreServicio}}</p>
+            <p *ngIf="diasdif > 0 " class="suscripcion">Suscripción actual:
+              {{ultimaSuscripcion.servicio.nombreServicio}}</p>
 
             <p class="estado">Estado de suscripción:
-              <span *ngIf="diasdif > 0 && diasdif < 8" class="porTerminar">Termina el {{replaceAt(ultimaSuscripcion.fechaFin,10," ") | date:'mediumDate'}}</span>
-              <span *ngIf="diasdif > 8" class="lejosdevencer">Termina el {{replaceAt(ultimaSuscripcion.fechaFin,10," ") | date:'mediumDate'}}</span>
-              <span *ngIf="diasdif <= 0 " class="vencido">Termino el {{replaceAt(ultimaSuscripcion.fechaFin,10," ") | date:'mediumDate'}}</span>
+              <span *ngIf="diasdif > 0 && diasdif < 8" class="porTerminar">Termina el
+                {{replaceAt(ultimaSuscripcion.fechaFin,10," ") | date:'mediumDate'}}</span>
+              <span *ngIf="diasdif > 8" class="lejosdevencer">Termina el {{replaceAt(ultimaSuscripcion.fechaFin,10," ")
+                | date:'mediumDate'}}</span>
+              <span *ngIf="diasdif <= 0 " class="vencido">Termino el {{replaceAt(ultimaSuscripcion.fechaFin,10," ") |
+                date:'mediumDate'}}</span>
             </p>
 
-            <!--Facebook-->
-            <a type="button" mdbBtn floating="true" size="lg" class="btn-fb waves-light prefix blue-text" mdbWavesEffect><i class="fa fa-facebook-f"></i></a>
-            <!--Twitter-->
-            <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light prefix blue-text" mdbWavesEffect><i class="fa fa-twitter"></i></a>
-            <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light prefix blue-text" mdbWavesEffect><i class="fa fa-instagram"></i></a>
+            <p>
+
+              <!--Facebook-->
+              <a type="button" mdbBtn floating="true" size="lg" class="btn-fb waves-light prefix blue-text"
+                mdbWavesEffect><i class="fa fa-facebook-f"></i></a>
+              <!--Twitter-->
+              <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light prefix blue-text"
+                mdbWavesEffect><i class="fa fa-twitter"></i></a>
+              <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light prefix blue-text"
+                mdbWavesEffect><i class="fa fa-instagram"></i></a>
+            </p>
 
             <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogEditUser()">editar<i class="fa fa-user "
                 aria-hidden="true"></i></button>
             <a class="btn aqua-gradient  btn-md" href="#/student/medicalHistory">
               Historial Medico<i class="fa fa-heartbeat"></i>
             </a>
-            <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogEditPasswordUser()">Editar contraseña<i class="fa fa-key "
-              aria-hidden="true"></i></button>
+            <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogEditPasswordUser()">Editar
+              contraseña<i class="fa fa-key " aria-hidden="true"></i></button>
             <!-- <button type="button" class="btn btn-outline-default btn-rounded waves-effect"><i class="fa fa-gem mr-2"
                     aria-hidden="true"></i>Button</button> -->
           </div>
@@ -78,8 +89,10 @@
                         {{replaceAt(suscripcion.fechaFin,10," ") | date:'mediumDate' }}
                       </mat-panel-description>
                     </mat-expansion-panel-header>
-                    <p class="fechaRegistro">Fecha Inicio: {{replaceAt(suscripcion.fechaInicio,10," ") | date:'mediumDate' }}</p>
-                    <p class="fechaVencimiento">Fecha Final: {{replaceAt(suscripcion.fechaFin,10," ") | date:'mediumDate' }}</p>
+                    <p class="fechaRegistro">Fecha Inicio: {{replaceAt(suscripcion.fechaInicio,10," ") |
+                      date:'mediumDate' }}</p>
+                    <p class="fechaVencimiento">Fecha Final: {{replaceAt(suscripcion.fechaFin,10," ") |
+                      date:'mediumDate' }}</p>
                     <p class="Costo">Total Pagado: {{suscripcion.precioSuscripcion | currency }}</p>
                   </mat-expansion-panel>
                 </mat-accordion>
