--- a/src/app/student-schedule/student-schedule.component.html
+++ b/src/app/student-schedule/student-schedule.component.html
@@ -1,3 +1,5 @@
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
+
 <ng-template #modalContent let-close="close">
   <div class="modal-header">
     <h5 class="modal-title">Event action occurred</h5>
@@ -32,14 +34,14 @@
         [(viewDate)]="viewDate"
         (viewDateChange)="activeDayIsOpen = false"
       >
-        Previous
+        Anterior
       </div>
       <div
         class="btn btn-outline-secondary"
         mwlCalendarToday
         [(viewDate)]="viewDate"
       >
-        Today
+        Hoy
       </div>
       <div
         class="btn btn-primary"
@@ -48,7 +50,7 @@
         [(viewDate)]="viewDate"
         (viewDateChange)="activeDayIsOpen = false"
       >
-        Next
+        Siguiente
       </div>
     </div>
   </div>
@@ -62,21 +64,21 @@
         (click)="view = CalendarView.Month"
         [class.active]="view === CalendarView.Month"
       >
-        Month
+        Mes
       </div>
       <div
         class="btn btn-primary"
         (click)="view = CalendarView.Week"
         [class.active]="view === CalendarView.Week"
       >
-        Week
+        Semana
       </div>
       <div
         class="btn btn-primary"
         (click)="view = CalendarView.Day"
         [class.active]="view === CalendarView.Day"
       >
-        Day
+        Día
       </div>
     </div>
   </div>
@@ -115,4 +117,3 @@
 </div>
 
 <br /><br /><br />
-
