--- a/src/app/student-medical-history/student-medical-history.component.html
+++ b/src/app/student-medical-history/student-medical-history.component.html
@@ -1,13 +1,19 @@
-<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
 
-<div class="center-div">
-  <h2>Cuestionario de Historial Medico</h2>
-  <div class="preguntas" *ngFor="let pregunta of listaPreguntas">
-    <mat-checkbox [disabled]="isEditable" class="pregunta" [(ngModel)]="pregunta.select">{{pregunta.nombrePregunta}}</mat-checkbox>
-  </div>
-  <div class="opciones">
-    <button mat-raised-button (click)="editar()" id="toggle-linear">
-      {{isEditable ? 'Editar' : 'Guardar Cambios'}}
-    </button>
-  </div>
-</div>
+<mdb-card class="text-center " borderColor="border-info" >
+  <mdb-card-header>Hostorial medido del alumno</mdb-card-header>
+  <mdb-card-body>
+    <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
+    
+    <div class="center-div">
+      <h2>Cuestionario de Historial Medico</h2>
+      <div class="preguntas" *ngFor="let pregunta of listaPreguntas">
+        <mat-checkbox [disabled]="isEditable" class="pregunta" [(ngModel)]="pregunta.select">{{pregunta.nombrePregunta}}</mat-checkbox>
+      </div>
+      <div class="opciones">
+        <button mat-raised-button (click)="editar()" id="toggle-linear">
+          {{isEditable ? 'Editar' : 'Guardar Cambios'}}
+        </button>
+      </div>
+    </div>
+  </mdb-card-body>
+</mdb-card>
