--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,18 +2,12 @@
   <mat-toolbar id="mat-toolbar-home">
     <span><a (click)="scrollToElement('div-image-init')">Inicio</a></span>
     <span class="example-spacer"></span>
-    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Acerca de la empresa"><a
-      (click)="scrollToElement('div-image-aboutOf')">help</a></mat-icon>
-    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Noticias"><a
-      (click)="scrollToElement('div-image-news')">notifications</a></mat-icon>
-    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Servicios"><a
-      (click)="scrollToElement('div-image-services')">next_week</a></mat-icon>
-    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Tarifas"><a
-      (click)="scrollToElement('div-image-rates')">attach_money</a></mat-icon>
-    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Contacto"><a
-      (click)="scrollToElement('div-image-contact')">email</a></mat-icon>
-    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Iniciar Sesion"><a
-      (click)="openDialogLogin()">person_pin</a></mat-icon>
+    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Acerca de la empresa"><a (click)="scrollToElement('div-image-aboutOf')">help</a></mat-icon>
+    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Noticias"><a (click)="scrollToElement('div-image-news')">notifications</a></mat-icon>
+    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Servicios"><a (click)="scrollToElement('div-image-services')">next_week</a></mat-icon>
+    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Tarifas"><a (click)="scrollToElement('div-image-rates')">attach_money</a></mat-icon>
+    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Contacto"><a (click)="scrollToElement('div-image-contact')">email</a></mat-icon>
+    <mat-icon *ngIf="!isScreenLow()" class="example-icon" matTooltip="Iniciar Sesion"><a (click)="openDialogLogin()">person_pin</a></mat-icon>
     <!--<a class="example-icon" href="">Iniciar Secion</a>-->
 
     <button *ngIf="isScreenLow()" mat-raised-button color="primary" [matMenuTriggerFor]="menu">Menu</button>
@@ -58,14 +52,19 @@
     <img src="assets/img/1.jpeg">
     <div id="div-one-aboutOf">
       <div id="div-two-aboutOf">
-        <h2 class="text-primary">Acerca de</h2>
-        <h3 class="text-primary">Mision</h3>
-        <p>Llegar cada vez, día a día a más personas y crearles conciencia sobre la importancia de la actividad física en el
-          desarrollo de una excelente calidad de vida</p>
-        <h3>Vision</h3>
-        <p>Crear un centro de acondicionamiento físico que tenga, las instalaciones, la maquinaria, la tecnología, el
-          personal que labora en el, totalmente profesional y un ambiente de trabajo ideal para la atención y asesoría a sus
-          usuarios en el acondicionamiento físico</p>
+          <div class="about-div">
+            <h2 class="text-primary">Acerca de</h2>
+            <h3 class="text-primary">Mision</h3>
+            <p>Llegar cada vez, día a día a más personas y crearles conciencia sobre la importancia de la actividad
+              física en el
+              desarrollo de una excelente calidad de vida</p>
+            <h3>Vision</h3>
+            <p>Crear un centro de acondicionamiento físico que tenga, las instalaciones, la maquinaria, la tecnología,
+              el
+              personal que labora en el, totalmente profesional y un ambiente de trabajo ideal para la atención y
+              asesoría a sus
+              usuarios en el acondicionamiento físico</p>
+            </div>
       </div>
     </div>
   </div>
@@ -78,22 +77,14 @@
       <div id="div-two-news">
         <h2 class="text-primary">Noticias</h2>
         <div class="myslides">
-          <ngx-hm-carousel
-            [(ngModel)]="configCarousel.index"
-            [autoplay-speed]="configCarousel.speed"
-            [autoplay]="configCarousel.autoplay"
-            [autoplay-direction]="configCarousel.direction"
-            [infinite]="configCarousel.infinite"
-            [data]="dataSourceNews"
-            onclick="document.getElementById('article-news').click()"
-            class="carousel">
+          <ngx-hm-carousel [(ngModel)]="configCarousel.index" [autoplay-speed]="configCarousel.speed" [autoplay]="configCarousel.autoplay"
+            [autoplay-direction]="configCarousel.direction" [infinite]="configCarousel.infinite" [data]="dataSourceNews"
+            onclick="document.getElementById('article-news').click()" class="carousel">
 
             <section ngx-hm-carousel-container class="content">
               <article (click)="openNews(news)" id="article-news" class="item cursor-pointer visible_important"
-                       ngx-hm-carousel-item
-                       *ngFor="let news of dataSourceNews; let i = index">
-                <div class="img"
-                     [style.backgroundImage]="'url('+news.urlImagen+')'">
+                ngx-hm-carousel-item *ngFor="let news of dataSourceNews; let i = index">
+                <div class="img" [style.backgroundImage]="'url('+news.urlImagen+')'">
                 </div>
                 <div id="div-article-news">
                   <h2>{{news.titular}}</h2>
@@ -122,8 +113,7 @@
             </ng-template>
 
             <ng-template #carouselDot let-model>
-              <div class="ball bg-accent"
-                   [class.visible]="model.index === model.currentIndex"></div>
+              <div class="ball bg-accent" [class.visible]="model.index === model.currentIndex"></div>
             </ng-template>
 
             <ng-template #carouselProgress let-progress>
@@ -137,8 +127,7 @@
   </div>
 
   <div id="div-image-services">
-    <img
-      src="assets/img/3.jpeg">
+    <img src="assets/img/3.jpeg">
     <div>
       <h2 class="text-primary">Servicios</h2>
       <p style="color: white">Selecciona alguno para ver mas informacion</p>
@@ -146,8 +135,7 @@
       <table>
         <th>
           <mat-chip-list class="mat-chip-list-stacked">
-            <mat-chip *ngFor="let chip of availablePrograms" selected [color]="chip.color"
-                      (click)="openDialogService(chip)">
+            <mat-chip *ngFor="let chip of availablePrograms" selected [color]="chip.color" (click)="openDialogService(chip)">
               {{chip.name}}
             </mat-chip>
           </mat-chip-list>
@@ -228,7 +216,7 @@
     <div class="div-footer">
       <p>Posted by: Hege Refsnes</p>
       <p>Contact information: <a href="mailto:someone@example.com">
-        someone@example.com</a>.</p>
+          someone@example.com</a>.</p>
     </div>
   </footer>
 </div>
