--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,8 +3,8 @@
 }
 
 .about-div{
-  background-color: #000;
-  opacity: .7;
+  background-color:  #162a9e;
+  opacity: 0.85;
   padding: 10px;
   color: white;
   border-radius: 5px;
