--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,10 +3,10 @@
 }
 
 .about-div{
-  background-color:  #162a9e;
+  /* background-color:  #162a9e; */
   opacity: 0.85;
   padding: 10px;
-  color: white;
+  color: black;
   border-radius: 5px;
 }
 
@@ -46,21 +46,30 @@ h1 {
   line-height: 1.2;
   font-size: 2rem;
   margin-bottom: 3rem;
-  color: #fff!important;
+  /* color: #fff!important; */
 }
 
 #div-image-aboutOf h2 {
-  text-align: center;
+  /* text-align: center; */
+ font-size: 
+}
+.center-div{
+  font-style: italic;
 }
 
 #div-image-aboutOf p {
-  color: rgba(255,255,255,.5)!important;
+ /*  color: rgba(255,255,255,.5)!important; */
   font-size: 1.2rem;
   text-align: justify;
+ /*  position: relative; */
+  left: 10%;
+  right:  10%;
+  font-style: italic;
 }
 
 #div-image-aboutOf h3 {
   font-size: 1.5rem;
+  
 }
 
 #div-image-init div, #div-image-services div {
