--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -279,3 +279,17 @@ table {
     font-size: 1rem;
   }
 }
+
+
+body {
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,p {
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
