--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
 $transition_time:.2s;
 
 .carousel {
-  color: #000000;
+  color: #327ae6;
   .content {
     display: flex;
 
@@ -51,7 +51,7 @@ $transition_time:.2s;
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background: black;
+    background: blue;
     border: 2px solid;
     opacity: 0.5;
     margin-bottom: 4em;
