--- a/src/app/student-progress/student-progress.component.html
+++ b/src/app/student-progress/student-progress.component.html
@@ -6,6 +6,10 @@
   <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogAddProgress()">
     Nuevo Progreso <i class="fa fa-plus " aria-hidden="true"></i>
   </button>
+
+  <button type="button" class="btn btn-info btn-rounded btn-md" (click)="generatePdf()">
+    Generar Pdf <i class="fa fa-plus " aria-hidden="true"></i>
+  </button>
   <div class="card-deck">
     <!--Card-->
 
