--- a/src/app/dialogs/dialog-edit-pass/dialog-edit-pass/dialog-edit-pass.component.html
+++ b/src/app/dialogs/dialog-edit-pass/dialog-edit-pass/dialog-edit-pass.component.html
@@ -14,5 +14,5 @@
 
 <div id="btnPerson" class="modal-footer d-flex justify-content-center">
   <button mdbBtn color="deep-orange" class="waves-light" (click)="updatePass()" mdbWavesEffect mat-dialog-close>Guardar</button>
-  <button mdbBtn color="light" class="waves-light" mdbWavesEffect mat-dialog-close>Cancelar</button>
+  <button mdbBtn color="light" class="waves-light" (click)="closeDialogEditPass()" mdbWavesEffect mat-dialog-close>Cancelar</button>
 </div>
