--- a/src/app/student-progress/student-progress.component.html
+++ b/src/app/student-progress/student-progress.component.html
@@ -1,24 +1,13 @@
 <h1></h1>
 
-<ngx-loading
-  [show]="loading"
-  [config]="{ backdropBorderRadius: '3px' }"
-></ngx-loading>
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
 
 <div *ngIf="!loading">
-  <button
-    type="button"
-    class="btn btn-info btn-rounded btn-md"
-    (click)="openDialogAddProgress()"
-  >
+  <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogAddProgress()">
     Nuevo Progreso <i class="fa fa-plus " aria-hidden="true"></i>
   </button>
 
-  <button
-    type="button"
-    class="btn btn-info btn-rounded btn-md"
-    (click)="generatePdf()"
-  >
+  <button type="button" class="btn btn-info btn-rounded btn-md" (click)="generatePdf()">
     Generar Pdf <i class="fa fa-plus " aria-hidden="true"></i>
   </button>
   <div class="card-deck">
@@ -30,27 +19,15 @@
         <p>Progresos</p>
         <div class="text-center">
           <!--Facebook-->
-          <a
-            type="button"
-            class="btn-floating btn-small waves-light"
-            mdbWavesEffect
-          >
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
             <i class="fa fa-facebook-f"></i>
           </a>
           <!--Twitter-->
-          <a
-            type="button"
-            class="btn-floating btn-small waves-light"
-            mdbWavesEffect
-          >
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
             <i class="fa fa-twitter"></i>
           </a>
           <!--Google +-->
-          <a
-            type="button"
-            class="btn-floating btn-small waves-light"
-            mdbWavesEffect
-          >
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
             <i class="fa fa-google-plus"></i>
           </a>
         </div>
@@ -59,17 +36,9 @@
       <mdb-card-body cascade="true" class="text-center">
         <!--Card content-->
         <div style="display: block">
-          <canvas
-            mdbChart
-            [chartType]="chartType"
-            [datasets]="chartDatasetsMasaCorporal"
-            [colors]="chartColors"
-            [labels]="chartLabelsFechas"
-            [options]="chartOptions"
-            [legend]="false"
-            (chartHover)="chartHovered($event)"
-            (chartClick)="chartClicked($event)"
-          >
+          <canvas mdbChart [chartType]="chartType" [datasets]="chartDatasetsMasaCorporal" [colors]="chartColors"
+            [labels]="chartLabelsFechas" [options]="chartOptions" [legend]="false" (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)">
           </canvas>
         </div>
       </mdb-card-body>
@@ -83,27 +52,15 @@
         <p>Progresos</p>
         <div class="text-center">
           <!--Facebook-->
-          <a
-            type="button"
-            class="btn-floating btn-small waves-light"
-            mdbWavesEffect
-          >
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
             <i class="fa fa-facebook-f"></i>
           </a>
           <!--Twitter-->
-          <a
-            type="button"
-            class="btn-floating btn-small waves-light"
-            mdbWavesEffect
-          >
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
             <i class="fa fa-twitter"></i>
           </a>
           <!--Google +-->
-          <a
-            type="button"
-            class="btn-floating btn-small waves-light"
-            mdbWavesEffect
-          >
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
             <i class="fa fa-google-plus"></i>
           </a>
         </div>
@@ -112,17 +69,9 @@
       <mdb-card-body cascade="true" class="text-center">
         <!--Card content-->
         <div style="display: block">
-          <canvas
-            mdbChart
-            [chartType]="chartType"
-            [datasets]="chartDatasetsGrasaCorporal"
-            [labels]="chartLabelsFechas"
-            [colors]="chartColors"
-            [options]="chartOptions"
-            [legend]="false"
-            (chartHover)="chartHovered($event)"
-            (chartClick)="chartClicked($event)"
-          >
+          <canvas mdbChart [chartType]="chartType" [datasets]="chartDatasetsGrasaCorporal" [labels]="chartLabelsFechas"
+            [colors]="chartColors" [options]="chartOptions" [legend]="false" (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)">
           </canvas>
         </div>
       </mdb-card-body>
@@ -132,14 +81,9 @@
 
   <div class="row justify-content-md-center">
     <div class="col-md-auto">
-      <ngx-gallery
-        [options]="galleryOptions"
-        [images]="galleryImages"
-      ></ngx-gallery>
+      <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
     </div>
   </div>
-  <!--
-
   <div class="justify-content-center">
     <div class="col-md-12">
       <div class="list-group">
@@ -151,6 +95,5 @@
       </div>
     </div>
   </div>
-  -->
-  <hr />
+  <hr>
 </div>
