--- a/src/app/dialogs/login/dialog-login.component.html
+++ b/src/app/dialogs/login/dialog-login.component.html
@@ -2,12 +2,12 @@
   <mat-label id="label-login">Iniciar Sesión</mat-label>
   <br>
   <mat-form-field id="mat-form-name-user">
-    <input matInput placeholder="Nombre de Usuario" id="userName" required>
+    <input matInput value="srfeudal" placeholder="Nombre de Usuario" id="userName" required>
   </mat-form-field>
   <br>
   <mat-form-field id="mat-form-password">
-    <input matInput type="password" placeholder="Constraseña" id="password" required>
+    <input matInput value="cesar" type="password" placeholder="Constraseña" id="password" required>
   </mat-form-field>
   <br>
-  <button id="button-login" mat-flat-button (click)="loginUser($event)" mat-dialog-close>Ingresar</button>
+  <button id="button-login" mat-flat-button (click)="loginUser()" mat-dialog-close>Ingresar</button>
 </form>
