se corrigio repintado de toolbar

--- a/src/app/dialogs/login/dialog-login.component.html
+++ b/src/app/dialogs/login/dialog-login.component.html
@@ -9,5 +9,6 @@
     <input matInput value="cesar" type="password" placeholder="Constraseña" id="password" required>
   </mat-form-field>
   <br>
-  <button id="button-login" mat-flat-button (click)="loginUser()" mat-dialog-close>Ingresar</button>
+  <button id="button-login" mat-flat-button (click)="loginUser()">Ingresar</button>
+  <!--mat-dialog-close-->
 </form>
