--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -42,14 +42,21 @@
               {{ultimaSuscripcion.servicio.nombreServicio}}</p>
             <p *ngIf="diasdif > 0 " class="suscripcion">Suscripción actual:
               {{ultimaSuscripcion.servicio.nombreServicio}}</p>
-
             <p class="estado">Estado de suscripción:
-              <span *ngIf="diasdif > 0 && diasdif < 8" class="porTerminar">Termina el
+              <span *ngIf="diasdif > 0 && diasdif < 8 && !ultimaSuscripcion.fechaFin == ''" class="porTerminar">Termina
+                el
                 {{replaceAt(ultimaSuscripcion.fechaFin,10," ") | date:'mediumDate'}}</span>
-              <span *ngIf="diasdif > 8" class="lejosdevencer">Termina el {{replaceAt(ultimaSuscripcion.fechaFin,10," ")
+              <span *ngIf="diasdif > 8 && !ultimaSuscripcion.fechaFin == ''" class="lejosdevencer">Termina el
+                {{replaceAt(ultimaSuscripcion.fechaFin,10," ")
                 | date:'mediumDate'}}</span>
-              <span *ngIf="diasdif <= 0 " class="vencido">Termino el {{replaceAt(ultimaSuscripcion.fechaFin,10," ") |
+              <span *ngIf="diasdif <= 0 && !ultimaSuscripcion.fechaFin == ''" class="vencido">Termino el
+                {{replaceAt(ultimaSuscripcion.fechaFin,10," ") |
                 date:'mediumDate'}}</span>
+              <span *ngIf="ultimaSuscripcion.fechaFin == '' && ultimaSuscripcion.sesiones < 3" class="vencido">Te
+                quedan {{ultimaSuscripcion.sesiones}} sesiones</span>
+              <span *ngIf="ultimaSuscripcion.fechaFin == '' && ultimaSuscripcion.sesiones >= 3" class="lejosdevencer">Te
+                quedan {{ultimaSuscripcion.sesiones}} sesiones</span>
+
             </p>
 
             <p>
@@ -85,14 +92,20 @@
                       <mat-panel-title>
                         {{suscripcion.servicio.nombreServicio}}
                       </mat-panel-title>
-                      <mat-panel-description>
+                      <mat-panel-description *ngIf="suscripcion.fechaFin != undefined">
                         {{replaceAt(suscripcion.fechaFin,10," ") | date:'mediumDate' }}
+                      </mat-panel-description>
+                      <mat-panel-description *ngIf="suscripcion.fechaFin == undefined">
+                        {{suscripcion.sesiones}} sesiones
                       </mat-panel-description>
                     </mat-expansion-panel-header>
                     <p class="fechaRegistro">Fecha Inicio: {{replaceAt(suscripcion.fechaInicio,10," ") |
                       date:'mediumDate' }}</p>
-                    <p class="fechaVencimiento">Fecha Final: {{replaceAt(suscripcion.fechaFin,10," ") |
+                    <p *ngIf="suscripcion.fechaFin != undefined" class="fechaVencimiento">Fecha Final:
+                      {{replaceAt(suscripcion.fechaFin,10," ") |
                       date:'mediumDate' }}</p>
+                    <p *ngIf="suscripcion.fechaFin == undefined" class="fechaVencimiento">Numero de sesiones: {{
+                      suscripcion.sesiones}}</p>
                     <p class="Costo">Total Pagado: {{suscripcion.precioSuscripcion | currency }}</p>
                   </mat-expansion-panel>
                 </mat-accordion>
