implementacion de logueo entrenadores

--- a/src/app/dialogs/service/dialog-service.component.html
+++ b/src/app/dialogs/service/dialog-service.component.html
@@ -1,11 +1,12 @@
 <mat-toolbar>
-  <h2 mat-dialog-title>{{data.name}}</h2>
+  <h2 mat-dialog-title>{{data.nombreServicio}}</h2>
   <span class="example-spacer"></span>
-  <mat-icon (click)="closeDialog()" class="example-icon" matTooltip="close">close</mat-icon>
+  <mat-icon style="cursor: pointer;" (click)="closeDialog()" class="example-icon" matTooltip="close">close</mat-icon>
 </mat-toolbar>
+<br>
 <mat-dialog-content class="mat-typography">
   <div>
     <img src="{{data.image}}">
-    <p>{{data.description}}</p>
+    <p>{{data.descripcionServicio}}</p>
   </div>
 </mat-dialog-content>
