--- a/src/app/dialogs/login/dialog-login.component.html
+++ b/src/app/dialogs/login/dialog-login.component.html
@@ -1,14 +1,19 @@
-<form>
+<!--<form>-->
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
+
   <mat-label id="label-login">Iniciar Sesión</mat-label>
   <br>
   <mat-form-field id="mat-form-name-user">
-    <input matInput value="srfeudal" placeholder="Nombre de Usuario" id="userName" required>
+    <input matInput value="1234567" placeholder="Nombre de Usuario" id="userName" required #inputUserName>
   </mat-form-field>
   <br>
   <mat-form-field id="mat-form-password">
-    <input matInput value="cesar" type="password" placeholder="Constraseña" id="password" required>
+    <input matInput value="123456" type="password" placeholder="Constraseña" id="password" required #inputPassword>
   </mat-form-field>
+  <div class="alert alert-danger" role="alert" *ngIf="activateAlertInsertData">
+    <p style="text-align: justify">Debe diligenciar los campos <br>nombre de usuario y contraseña</p>
+  </div>
   <br>
   <button id="button-login" mat-flat-button (click)="loginUser()">Ingresar</button>
   <!--mat-dialog-close-->
-</form>
+<!--</form>-->
