--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,21 +2,13 @@
 <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
 
 <section class="section pb-3 text-center" *ngIf="!loading">
-
   <!--Section heading-->
   <h1 class="section-heading h1 pt-4">Perfil</h1>
   <!--Section description-->
-
-
   <div class="row">
-
-
 
     <!--Grid column-->
     <div class="col-lg-12 col-md-12 mb-4">
-
-
-
 
       <!--Card-->
       <div class="text-center">
@@ -38,7 +30,8 @@
             <!--Quotation
             <p><i class="fa fa-quote-left"></i> Neque cupiditate assumenda in maiores repudiandae mollitia
               architecto.</p>-->
-            <p *ngIf="diasdif <= 0 " class="suscripcion">Ultima Suscripción:
+              <div *ngIf="ultimaSuscripcion!=undefined">
+            <p *ngIf=" diasdif <= 0 " class="suscripcion">Ultima Suscripción:
               {{ultimaSuscripcion.servicio.nombreServicio}}</p>
             <p *ngIf="diasdif > 0 " class="suscripcion">Suscripción actual:
               {{ultimaSuscripcion.servicio.nombreServicio}}</p>
@@ -56,9 +49,8 @@
                 quedan {{ultimaSuscripcion.sesiones}} sesiones</span>
               <span *ngIf="ultimaSuscripcion.fechaFin == '' && ultimaSuscripcion.sesiones >= 3" class="lejosdevencer">Te
                 quedan {{ultimaSuscripcion.sesiones}} sesiones</span>
-
             </p>
-
+          </div>
             <p>
 
               <!--Facebook-->
